--- a/settings.gradle
+++ b/settings.gradle
@@ -3,8 +3,13 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "Qasir Test"
 include ':app'
+include ':feature:list'
+include ':feature:detail'
+include ':data'
+include ':network'
+include ':abstraction'
