--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,19 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 
+android {
+    defaultConfig {
+        applicationId androidAppId
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+}
+
 apply from: "$rootDir/build-system/android/android.gradle"
 apply from: "$rootDir/build-system/common/android-commons.gradle"
 apply from: "$rootDir/build-system/dependencies-libraries/dependencies-library.gradle"
