--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: "$rootDir/build-system/dependencies.gradle"
+
 buildscript {
     ext.kotlin_version = "1.5.30"
 
