--- a/build-system/support/support.gradle
+++ b/build-system/support/support.gradle
@@ -2,26 +2,26 @@ apply from: "$rootDir/build-system/dependencies.gradle"
 
 dependencies {
     // Android Navigation
-    implementation support.navigationFragment
-    implementation support.navigationUi
+    implementation commons.navigationFragment
+    implementation commons.navigationUi
 
     // ViewModel and Livedata
-    implementation support.lifecycle
-    implementation support.lifecycleVM
-    implementation support.lifecycleVMSavedState
+    implementation commons.lifecycle
+    implementation commons.lifecycleVM
+    implementation commons.lifecycleVMSavedState
 
 
     // Kotlin Coroutines
-    implementation support.coroutines
-    implementation support.coroutinesCore
+    implementation commons.coroutines
+    implementation commons.coroutinesCore
 
     // Room database
-    implementation support.room
-    kapt support.roomCompiler
-    implementation support.roomCommon
-    implementation support.roomRxJava
-    implementation support.roomKtx
+    implementation commons.room
+    kapt commons.roomCompiler
+    implementation commons.roomCommon
+    implementation commons.roomRxJava
+    implementation commons.roomKtx
 
     // Custom Tabs Chrome
-    implementation support.browser
+    implementation commons.browser
 }
