--- a/network/build.gradle
+++ b/network/build.gradle
@@ -16,5 +16,5 @@ apply from: "$rootDir/build-system/support/support.gradle"
 apply from: "$rootDir/build-system/test/android-test.gradle"
 
 dependencies {
-    implementation project(":abstraction")
+    implementation project(":utils")
 }
