--- a/build-system/dependencies.gradle
+++ b/build-system/dependencies.gradle
@@ -157,24 +157,24 @@ ext {
             design               : "com.google.android.material:material:$androidxVersion",
             kotlinextensions     : "org.jetbrains.kotlin:kotlin-android-extensions-runtime:$kotlin_version",
             core                 : "androidx.core:core-ktx:$coreVersion",
+            paging               : "androidx.paging:paging-runtime:$pagingVersion",
+            activityCompose      : "androidx.activity:activity-compose:$activityComposeVersion",
+            activityKtx          : "androidx.activity:activity-ktx:$activityKtx",
+    ]
+
+    commons = [
+            navigationFragment   : "androidx.navigation:navigation-fragment-ktx:$navVersion",
+            navigationUi         : "androidx.navigation:navigation-ui-ktx:$navVersion",
+            lifecycle            : "android.arch.lifecycle:extensions:$lifeCycleArchVersion",
+            lifecycleVM          : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion",
+            lifecycleVMSavedState: "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycleVersion",
+            coroutines           : "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion",
+            coroutinesCore       : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion",
             roomCompiler         : "androidx.room:room-compiler:$roomVersion",
             room                 : "androidx.room:room-runtime:$roomVersion",
             roomRxJava           : "androidx.room:room-rxjava2:$roomVersion",
             roomCommon           : "androidx.room:room-common:$roomVersion",
             roomKtx              : "androidx.room:room-ktx:$roomKtxVersion",
-            paging               : "androidx.paging:paging-runtime:$pagingVersion",
-            lifecycle            : "android.arch.lifecycle:extensions:$lifeCycleArchVersion",
-            lifecycleVM          : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion",
-            lifecycleVMSavedState: "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycleVersion",
-            navigationFragment   : "androidx.navigation:navigation-fragment-ktx:$navVersion",
-            navigationUi         : "androidx.navigation:navigation-ui-ktx:$navVersion",
-            koin                 : "org.koin:koin-androidx-ext:$koinVersion",
-            koinScope            : "org.koin:koin-androidx-scope:$koinVersion",
-            koinViewmodel        : "org.koin:koin-androidx-viewmodel:$koinVersion",
-            coroutines           : "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion",
-            coroutinesCore       : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion",
-            activityCompose      : "androidx.activity:activity-compose:$activityComposeVersion",
-            activityKtx          : "androidx.activity:activity-ktx:$activityKtx",
             browser              : "androidx.browser:browser:1.3.0"
     ]
 
