--- a/feature/detail/build.gradle
+++ b/feature/detail/build.gradle
@@ -16,7 +16,7 @@ apply from: "$rootDir/build-system/support/support.gradle"
 apply from: "$rootDir/build-system/test/android-test.gradle"
 
 dependencies {
-    implementation project(":abstraction")
     implementation project(":network")
     implementation project(":data")
+    implementation project(":utils")
 }
